[update] clean outputs in all notebooks

--- a/notebooks/interval_confidence.ipynb
+++ b/notebooks/interval_confidence.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,11 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# LLM OPEN SOURCE + FINE-TUNING DISTIL-BERT\n",
+    "## LLM OPEN SOURCE + FINE-TUNING DISTIL-BERT\n",
     "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p5-alpha3/logs/test_logs.csv\") # LLM opensource distil-bert alpha3 p5\n",
     "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p3-alpha3/logs/test_logs.csv\") # LLM opensource distil-bert alpha3 p3\n",
     "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p2plus-alpha3/logs/test_logs.csv\") # LLM opensource distil-bert alpha3 p2plus\n",
@@ -43,23 +43,65 @@
     "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p5-alpha5/logs/test_logs.csv\") # LLM opensource distil-bert alpha5 p5\n",
     "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p3-alpha5/logs/test_logs.csv\") # LLM opensource distil-bert alpha5 p3\n",
     "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p2plus-alpha5/logs/test_logs.csv\") # LLM opensource distil-bert alpha5 p2plus\n",
-    "df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p2neg-alpha5/logs/test_logs.csv\") # LLM opensource distil-bert alpha5 p2neg\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p2neg-alpha5/logs/test_logs.csv\") # LLM opensource distil-bert alpha5 p2neg\n",
+    "## LLM OPEN SOURCE + FINE-TUNING BART-LARGE-MNLI\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p5-alpha3/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha3 p5\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p3-alpha3/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha3 p3\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p2plus-alpha3/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha3 p2plus\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p2neg-alpha3/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha3 p2neg\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p5-alpha4/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha4 p5\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p3-alpha4/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha4 p3\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p2plus-alpha4/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha4 p2plus\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p2neg-alpha4/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha4 p2neg\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p5-alpha5/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha5 p5\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p3-alpha5/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha5 p3\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p2plus-alpha5/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha5 p2plus\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p2neg-alpha5/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha5 p2neg\n",
+    "\n",
+    "\n",
+    "## LLM MiniGPT-4 (Open AI) + Fine-Tuning distil-bert\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p5-alpha3/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha4 p5\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p3-alpha3/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha4 p3\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p2plus-alpha3/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha4 p2plus\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p2neg-alpha3/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha4 p2neg\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p5-alpha4/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha4 p5\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p3-alpha4/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha4 p3\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p2plus-alpha4/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha4 p2plus\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p2neg-alpha4/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha4 p2neg\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p5-alpha5/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha5 p5\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p3-alpha5/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha5 p3\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p2plus-alpha5/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha5 p2neg\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p2neg-alpha5/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha5 p2neg\n",
+    "## LLM MiniGPT-4 (Open AI) + BART-LARGE-MNLI\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p5-alpha3/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha3 p5\n",
+    "df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p3-alpha3/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha3 p3\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p2plus-alpha3/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha3 p2plus\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p2neg-alpha3/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha3 p2neg\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p5-alpha4/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha4 p5\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p3-alpha4/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha4 p3\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p2plus-alpha4/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha4 p2plus\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p2neg-alpha4/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha4 p2neg\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p5-alpha5/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha5 p5\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p3-alpha5/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha5 p3\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p2plus-alpha5/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha5 p2plus\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p2neg-alpha5/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha5 p2neg\n",
+    "\n",
     "\n",
     "f1_scores = df[\"f1_score\"].to_numpy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.93473619, 0.93150531, 0.93447674, 0.93751167, 0.9193842 ])"
+       "array([0.760916  , 0.7406927 , 0.75432359, 0.75193405, 0.76582263])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,18 +119,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Max F1-score: 0.9375116713352007\n",
-      "Average F1-score: 0.9315228236685668\n",
-      "Confidence interval 95%: (0.9226933751598609, 0.9403522721772726)\n",
-      "Inteval: 0.008829448508705817 - Interval: 0.008829448508705817\n",
-      "Inteval: 0.008829448508705817 - Interval: 0.008829448508705817\n"
+      "Max F1-score: 0.7658226301275305\n",
+      "Average F1-score: 0.7547377945074475\n",
+      "Confidence interval 95%: (0.7428550462950477, 0.7666205427198473)\n",
+      "Inteval: 0.011882748212399763 - Interval: 0.011882748212399763\n",
+      "Inteval: 0.011882748212399763 - Interval: 0.011882748212399763\n"
      ]
     }
    ],
@@ -119,6 +161,13 @@
     "\n",
     "print(f\"Inteval: {abs(confidence_interval[0]-max(f1_scores))} - Interval: {abs(confidence_interval[1]-max(f1_scores))}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
