--- a/notebooks/sentcap.ipynb
+++ b/notebooks/sentcap.ipynb
@@ -35,87 +35,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of samples: 2360\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'Number of samples: {len(data[\"images\"])}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['imgid', 'sentences', 'split', 'filename'])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data[\"images\"][0].keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(data[\"images\"][0][\"sentences\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'tokens': ['a',\n",
-       "  'beautiful',\n",
-       "  'wellappointed',\n",
-       "  'kitchen',\n",
-       "  'with',\n",
-       "  'a',\n",
-       "  'counter',\n",
-       "  'window'],\n",
-       " 'word_sentiment': [0.0, 1, 0.0, 0.0, 0.0, 0.0, 0.0, 1],\n",
-       " 'sentiment': 1,\n",
-       " 'raw': 'A beautiful well-appointed kitchen with a counter window.'}"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data[\"images\"][1][\"sentences\"][2]"
    ]
@@ -134,7 +83,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
