--- a/notebooks/openai-sentiment-kfold.ipynb
+++ b/notebooks/openai-sentiment-kfold.ipynb
@@ -32,109 +32,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>text</th>\n",
-       "      <th>sentiment</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>The image shows a group of people standing on ...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>The image shows a long stretch of train tracks...</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>This image shows a busy city street with tall ...</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>The image shows a street with a small pothole ...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>This image shows a view of clouds from an airp...</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                text  sentiment\n",
-       "0  The image shows a group of people standing on ...          1\n",
-       "1  The image shows a long stretch of train tracks...          4\n",
-       "2  This image shows a busy city street with tall ...          2\n",
-       "3  The image shows a street with a small pothole ...          1\n",
-       "4  This image shows a view of clouds from an airp...          4"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha3_p5.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha3_p5.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha3_p3.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha3_p3.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha3_p2plus.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha3_p2plus.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha3_p2neg.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha3_p2neg.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/percept_dataset_alpha3_p5.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/gpt4-openai-classify/percept_dataset_alpha3_p5.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/percept_dataset_alpha3_p3.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/gpt4-openai-classify/percept_dataset_alpha3_p3.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/percept_dataset_alpha3_p2plus.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/gpt4-openai-classify/percept_dataset_alpha3_p2plus.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/percept_dataset_alpha3_p2neg.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/gpt4-openai-classify/percept_dataset_alpha3_p2neg.csv\")\n",
     "\n",
     "### Load experiments for alpha 4\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha4_p5.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha4_p5.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha4_p3.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha4_p3.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha4_p2plus.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha4_p2plus.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha4_p2neg.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha4_p2neg.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/percept_dataset_alpha4_p5.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/gpt4-openai-classify/percept_dataset_alpha4_p5.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/percept_dataset_alpha4_p3.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/gpt4-openai-classify/percept_dataset_alpha4_p3.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/percept_dataset_alpha4_p2plus.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/gpt4-openai-classify/percept_dataset_alpha4_p2plus.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/percept_dataset_alpha4_p2neg.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/gpt4-openai-classify/percept_dataset_alpha4_p2neg.csv\")\n",
     "\n",
     "### Load experiments for alpha 5\n",
-    "df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha5_p5.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha5_p5.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha5_p3.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha5_p3.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha5_p2plus.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha5_p2plus.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha5_p2neg.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha5_p2neg.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/percept_dataset_alpha5_p5.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/gpt4-openai-classify/percept_dataset_alpha5_p5.csv\")\n",
+    "df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/percept_dataset_alpha5_p3.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/gpt4-openai-classify/percept_dataset_alpha5_p3.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/percept_dataset_alpha5_p2plus.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/gpt4-openai-classify/percept_dataset_alpha5_p2plus.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/percept_dataset_alpha5_p2neg.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/gpt4-openai-classify/percept_dataset_alpha5_p2neg.csv\")\n",
     "\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.shape"
    ]
   },
   {
@@ -146,78 +86,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>accuracy</th>\n",
-       "      <th>f1_score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.752809</td>\n",
-       "      <td>0.709252</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.797753</td>\n",
-       "      <td>0.768909</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.808989</td>\n",
-       "      <td>0.770257</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.831461</td>\n",
-       "      <td>0.808476</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.741573</td>\n",
-       "      <td>0.732780</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   accuracy  f1_score\n",
-       "0  0.752809  0.709252\n",
-       "0  0.797753  0.768909\n",
-       "0  0.808989  0.770257\n",
-       "0  0.831461  0.808476\n",
-       "0  0.741573  0.732780"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# df_response = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-only/p5-results.csv\")\n",
+    "df_response = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-only/p3-results.csv\")\n",
+    "# df_response = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-only/p2-results.csv\")\n",
+    "df_response[\"response\"] = df_response[\"response\"].apply(lambda x: x.replace('.', '').replace(' ', ''))\n",
+    "display(df_response.head())\n",
+    "display(df_response.tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_response[\"response\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df[\"id\"].isin(df_response[\"id\"])].reset_index(drop=True)\n",
+    "display(df.head())\n",
+    "display(df.tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df_metrics = pd.DataFrame([])\n",
     "kfold = KFold(n_splits=5, shuffle=True, random_state=42)\n",
@@ -234,22 +139,26 @@
     "\n",
     "    if (len(sentiments) == 3):\n",
     "        sent_dic = {\n",
-    "            \"neg\": 0,\n",
-    "            \"neu\": 1,\n",
-    "            \"pos\": 2,\n",
+    "            \"Negative\": 1,\n",
+    "            \"Neutral\": 0,\n",
+    "            \"Positive\": 2,\n",
     "        }\n",
+    "        ids = df[\"id\"].iloc[val_idx].to_list()\n",
+    "        response = [df_response[df_response[\"id\"] == id][\"response\"].iloc[0] for id in ids]\n",
     "    elif (len(sentiments) == 2):\n",
     "        # P2+\n",
     "        # sent_dic = {\n",
-    "        #     \"neg\": 1,\n",
-    "        #     \"neu\": 0,\n",
-    "        #     \"pos\": 0,\n",
+    "        #     \"Negative\": 1,\n",
+    "        #     \"Neutral\": 0,\n",
+    "        #     \"Positive\": 0,\n",
     "        # }\n",
+    "        ids = df[\"id\"].iloc[val_idx].to_list()\n",
+    "        response = [df_response[df_response[\"id\"] == id][\"response\"].iloc[0] for id in ids]\n",
     "        # P2 -\n",
     "        sent_dic = {\n",
-    "            \"neg\": 0,\n",
-    "            \"neu\": 0,\n",
-    "            \"pos\": 1,\n",
+    "            \"Negative\": 0,\n",
+    "            \"Neutral\": 0,\n",
+    "            \"Positive\": 1,\n",
     "        }\n",
     "    else:\n",
     "        sent_dic = {\n",
@@ -259,13 +168,16 @@
     "            \"Slightlynegative\": 1,\n",
     "            \"Negative\": 0\n",
     "        }\n",
-    "        response = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-only/p5-results.csv\")[\"response\"].iloc[val_idx].to_list() # alpha5\n",
-    "\n",
+    "        ids = df[\"id\"].iloc[val_idx].to_list()\n",
+    "        response = [df_response[df_response[\"id\"] == id][\"response\"].iloc[0] for id in ids]\n",
+    "    # print(response)\n",
+    "    # print(target)\n",
     "    pred = []\n",
     "    for s in response:\n",
     "        pred.append(sent_dic[s.replace(' ', '')])\n",
     "\n",
-    "\n",
+    "    # print(pred)\n",
+    "    # break\n",
     "    accuracy_val = accuracy_score(target, pred)\n",
     "    f1_val = f1_score(target, pred, average=\"weighted\")    \n",
     "    df_metrics = pd.concat([df_metrics, pd.DataFrame({\"accuracy\": [accuracy_val], \"f1_score\": [f1_val]\n",
@@ -275,21 +187,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Max F1-score: 0.8084755258834586\n",
-      "Average F1-score: 0.7579346906874591\n",
-      "Confidence interval 95%: (0.7105339390660256, 0.8053354423088926)\n",
-      "Inteval: 0.047400751621433534 - Interval: 0.047400751621433534\n",
-      "Inteval: 0.047400751621433534 - Interval: 0.047400751621433534\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "f1_scores = df_metrics[\"f1_score\"].to_list()\n",
     "mean_f1 = np.mean(f1_scores)\n",
@@ -319,6 +219,13 @@
     "\n",
     "print(f\"Inteval: {abs(confidence_interval[0]-max(f1_scores))} - Interval: {abs(confidence_interval[1]-max(f1_scores))}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
