--- a/notebooks/vader.ipynb
+++ b/notebooks/vader.ipynb
@@ -16,13 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import os\n",
     "\n",
+    "from tqdm.notebook import tqdm\n",
     "import nltk\n",
     "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
     "from sklearn.model_selection import KFold\n",
@@ -47,36 +49,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha3_p5.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha3_p5.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha3_p3.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha3_p3.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha3_p2plus.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha3_p2plus.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha3_p2neg.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha3_p2neg.csv\")\n",
-    "\n",
-    "### Load experiments for alpha 4\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha4_p5.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha4_p5.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha4_p3.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha4_p3.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha4_p2plus.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha4_p2plus.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha4_p2neg.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha4_p2neg.csv\")\n",
-    "\n",
-    "### Load experiments for alpha 5\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha5_p5.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha5_p5.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha5_p3.csv\")\n",
-    "df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha5_p3.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha5_p2plus.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha5_p2plus.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/percept_dataset_alpha5_p2neg.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/percept_dataset_alpha5_p2neg.csv\")\n",
-    "\n",
-    "df.head()"
+    "data_path_open_source = \"/home/neemias/PerceptSent-LLM-approach/data/\"\n",
+    "data_path_open_ai = \"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-classify/\"\n",
+    "data_paths = [os.path.join(data_path_open_source, f) \n",
+    "              for f in os.listdir(data_path_open_source) if f.endswith('.csv')] + [os.path.join(data_path_open_ai, f)\n",
+    "                                                              for f in os.listdir(data_path_open_ai) if f.endswith('.csv')]\n",
+    "del data_paths[6]\n",
+    "data_paths[:10]"
    ]
   },
   {
@@ -92,55 +71,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_metrics = pd.DataFrame([])\n",
-    "kfold = KFold(n_splits=5, shuffle=True, random_state=42)\n",
-    "for fold, (train_idx, val_idx) in enumerate(kfold.split(df)):\n",
-    "    train_df = pd.DataFrame({\"text\": df[\"text\"].iloc[train_idx].to_list(), \n",
-    "                                     \"sentiment\": df[\"sentiment\"].iloc[train_idx].to_list()})\n",
-    "    val_df = pd.DataFrame({\"text\": df[\"text\"].iloc[val_idx].to_list(), \n",
-    "                                \"sentiment\": df[\"sentiment\"].iloc[val_idx].to_list()})\n",
-    "    \n",
-    "    model = SentimentIntensityAnalyzer()\n",
+    "for data_path in tqdm(data_paths):\n",
+    "    df = pd.read_csv(data_path)\n",
+    "    df_metrics = pd.DataFrame([])\n",
+    "    kfold = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "    for fold, (train_idx, val_idx) in enumerate(kfold.split(df)):\n",
+    "        train_df = pd.DataFrame({\"text\": df[\"text\"].iloc[train_idx].to_list(), \n",
+    "                                        \"sentiment\": df[\"sentiment\"].iloc[train_idx].to_list()})\n",
+    "        val_df = pd.DataFrame({\"text\": df[\"text\"].iloc[val_idx].to_list(), \n",
+    "                                    \"sentiment\": df[\"sentiment\"].iloc[val_idx].to_list()})\n",
+    "        \n",
+    "        model = SentimentIntensityAnalyzer()\n",
     "\n",
-    "    text = val_df[\"text\"].to_list()\n",
-    "    target = val_df[\"sentiment\"].to_list()\n",
+    "        text = val_df[\"text\"].to_list()\n",
+    "        target = val_df[\"sentiment\"].to_list()\n",
     "\n",
-    "    sentiments = np.unique(target)\n",
+    "        sentiments = np.unique(target)\n",
     "\n",
-    "    if (len(sentiments) == 3):\n",
-    "        sent_dic = {\n",
-    "            \"neg\": 1,\n",
-    "            \"neu\": 0,\n",
-    "            \"pos\": 2,\n",
-    "        }\n",
-    "    elif (len(sentiments) == 2):\n",
-    "        # P2+\n",
-    "        # sent_dic = {\n",
-    "        #     \"neg\": 1,\n",
-    "        #     \"neu\": 0,\n",
-    "        #     \"pos\": 0,\n",
-    "        # }\n",
-    "        # P2 -\n",
-    "        sent_dic = {\n",
-    "            \"neg\": 0,\n",
-    "            \"neu\": 0,\n",
-    "            \"pos\": 1,\n",
-    "        }\n",
+    "        if (len(sentiments) == 3):\n",
+    "            sent_dic = {\n",
+    "                \"neg\": 1,\n",
+    "                \"neu\": 0,\n",
+    "                \"pos\": 2,\n",
+    "            }\n",
+    "        elif (len(sentiments) == 2):\n",
+    "            # P2+\n",
+    "            # sent_dic = {\n",
+    "            #     \"neg\": 1,\n",
+    "            #     \"neu\": 0,\n",
+    "            #     \"pos\": 0,\n",
+    "            # }\n",
+    "            # P2 -\n",
+    "            sent_dic = {\n",
+    "                \"neg\": 0,\n",
+    "                \"neu\": 0,\n",
+    "                \"pos\": 1,\n",
+    "            }\n",
     "\n",
-    "    pred = []\n",
-    "    for t in text:\n",
-    "        result = model.polarity_scores(t)\n",
-    "        del result[\"compound\"]\n",
-    "        # print(f\"Result: {result}\") # For debug\n",
-    "        max_key = max(result, key=result.get)\n",
-    "        max_value = result[max_key]\n",
-    "        pred.append(sent_dic[max_key])\n",
+    "        pred = []\n",
+    "        for t in text:\n",
+    "            result = model.polarity_scores(t)\n",
+    "            del result[\"compound\"]\n",
+    "            # print(f\"Result: {result}\") # For debug\n",
+    "            max_key = max(result, key=result.get)\n",
+    "            max_value = result[max_key]\n",
+    "            pred.append(sent_dic[max_key])\n",
     "\n",
-    "    accuracy_val = accuracy_score(target, pred)\n",
-    "    f1_val = f1_score(target, pred, average=\"weighted\")    \n",
-    "    df_metrics = pd.concat([df_metrics, pd.DataFrame({\"accuracy\": [accuracy_val], \"f1_score\": [f1_val]\n",
-    "                                                         })], axis=0)\n",
-    "df_metrics.head()"
+    "        accuracy_val = accuracy_score(target, pred)\n",
+    "        f1_val = f1_score(target, pred, average=\"weighted\")    \n",
+    "        df_metrics = pd.concat([df_metrics, pd.DataFrame({\"accuracy\": [accuracy_val], \"f1_score\": [f1_val]\n",
+    "                                                            })], axis=0)\n",
+    "    if (len(data_path.split('/')[-2].split('-')) > 2):\n",
+    "        flag = \"openai\"\n",
+    "    else:\n",
+    "        flag = \"opensource\"\n",
+    "    # display(df_metrics.head())\n",
+    "    if (len(sentiments) <= 3):\n",
+    "        df_metrics.to_csv(f\"/home/neemias/PerceptSent-LLM-approach/experiments/vader-experiment/{flag}-{data_path.split('/')[-1]}\",\n",
+    "                        index=False)"
    ]
   },
   {
@@ -149,41 +137,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f1_scores = df_metrics[\"f1_score\"].to_list()\n",
-    "mean_f1 = np.mean(f1_scores)\n",
+    "csv_files = [os.path.join(\"/home/neemias/PerceptSent-LLM-approach/experiments/vader-experiment\", f) \n",
+    "             for f in os.listdir(\"/home/neemias/PerceptSent-LLM-approach/experiments/vader-experiment\") if f.endswith(\".csv\")]\n",
+    "\n",
+    "for csv_file in csv_files:\n",
+    "    df_metrics = pd.read_csv(csv_file)\n",
+    "    f1_scores = df_metrics[\"f1_score\"].to_list()\n",
+    "    mean_f1 = np.mean(f1_scores)\n",
     "\n",
     "\n",
-    "# define the confidence level\n",
-    "confidence_level = 0.95\n",
-    "degrees_freedon = len(f1_scores)-1\n",
+    "    # define the confidence level\n",
+    "    confidence_level = 0.95\n",
+    "    degrees_freedon = len(f1_scores)-1\n",
     "\n",
-    "confidence_interval = stats.t.interval(\n",
-    "    confidence_level, \n",
-    "    degrees_freedon, \n",
-    "    loc=mean_f1, \n",
-    "    scale=stats.sem(f1_scores)\n",
-    ")\n",
+    "    confidence_interval = stats.t.interval(\n",
+    "        confidence_level, \n",
+    "        degrees_freedon, \n",
+    "        loc=mean_f1, \n",
+    "        scale=stats.sem(f1_scores)\n",
+    "    )\n",
     "\n",
-    "print(f\"Max F1-score: {max(f1_scores)}\")\n",
-    "print(f\"Average F1-score: {mean_f1}\")\n",
-    "print(f\"Confidence interval 95%: {confidence_interval}\")\n",
-    "print(f\"Inteval: {abs(confidence_interval[0]-mean_f1)} - Interval: {abs(confidence_interval[1]-mean_f1)}\")\n",
-    "confidence_interval = stats.t.interval(\n",
-    "    confidence_level, \n",
-    "    degrees_freedon, \n",
-    "    loc=max(f1_scores), \n",
-    "    scale=stats.sem(f1_scores)\n",
-    ")\n",
+    "    print(f\"\\n\\nProblem: {csv_file.split('/')[-1].split('.')[0]}\")\n",
+    "    print(f\"Max F1-score: {max(f1_scores)}\")\n",
+    "    print(f\"Average F1-score: {mean_f1}\")\n",
+    "    print(f\"Confidence interval 95%: {confidence_interval}\")\n",
+    "    print(f\"Inteval: {abs(confidence_interval[0]-mean_f1)} - Interval: {abs(confidence_interval[1]-mean_f1)}\")\n",
+    "    confidence_interval = stats.t.interval(\n",
+    "        confidence_level, \n",
+    "        degrees_freedon, \n",
+    "        loc=max(f1_scores), \n",
+    "        scale=stats.sem(f1_scores)\n",
+    "    )\n",
     "\n",
-    "print(f\"Inteval: {abs(confidence_interval[0]-max(f1_scores))} - Interval: {abs(confidence_interval[1]-max(f1_scores))}\")"
+    "    print(f\"Inteval: {abs(confidence_interval[0]-max(f1_scores))} - Interval: {abs(confidence_interval[1]-max(f1_scores))}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
