[New] add results for interval confidence for BART and DISTIL-BERT

--- a/notebooks/interval_confidence.ipynb
+++ b/notebooks/interval_confidence.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,87 +27,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "## LLM OPEN SOURCE + FINE-TUNING DISTIL-BERT\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p5-alpha3/logs/test_logs.csv\") # LLM opensource distil-bert alpha3 p5\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p3-alpha3/logs/test_logs.csv\") # LLM opensource distil-bert alpha3 p3\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p2plus-alpha3/logs/test_logs.csv\") # LLM opensource distil-bert alpha3 p2plus\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p2neg-alpha3/logs/test_logs.csv\") # LLM opensource distil-bert alpha3 p2neg\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p5-alpha4/logs/test_logs.csv\") # LLM opensource distil-bert alpha4 p5\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p3-alpha4/logs/test_logs.csv\") # LLM opensource distil-bert alpha4 p3\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p2plus-alpha4/logs/test_logs.csv\") # LLM opensource distil-bert alpha4 p2plus\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p2neg-alpha4/logs/test_logs.csv\") # LLM opensource distil-bert alpha4 p2neg\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p5-alpha5/logs/test_logs.csv\") # LLM opensource distil-bert alpha5 p5\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p3-alpha5/logs/test_logs.csv\") # LLM opensource distil-bert alpha5 p3\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p2plus-alpha5/logs/test_logs.csv\") # LLM opensource distil-bert alpha5 p2plus\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p2neg-alpha5/logs/test_logs.csv\") # LLM opensource distil-bert alpha5 p2neg\n",
-    "## LLM OPEN SOURCE + FINE-TUNING BART-LARGE-MNLI\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p5-alpha3/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha3 p5\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p3-alpha3/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha3 p3\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p2plus-alpha3/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha3 p2plus\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p2neg-alpha3/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha3 p2neg\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p5-alpha4/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha4 p5\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p3-alpha4/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha4 p3\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p2plus-alpha4/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha4 p2plus\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p2neg-alpha4/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha4 p2neg\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p5-alpha5/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha5 p5\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p3-alpha5/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha5 p3\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p2plus-alpha5/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha5 p2plus\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p2neg-alpha5/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha5 p2neg\n",
+    "# data_paths = [\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p5-alpha3/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p3-alpha3/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p2plus-alpha3/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p2neg-alpha3/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p5-alpha4/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p3-alpha4/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p2plus-alpha4/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p2neg-alpha4/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p5-alpha5/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p3-alpha5/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p2plus-alpha5/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/distil-experiment-p2neg-alpha5/logs/test_logs.csv\",\n",
+    "# ]\n",
     "\n",
+    "# ## LLM OPEN SOURCE + FINE-TUNING BART-LARGE-MNLI\n",
+    "# data_paths = [\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p5-alpha3/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p3-alpha3/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p2plus-alpha3/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p2neg-alpha3/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p5-alpha4/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p3-alpha4/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p2plus-alpha4/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p2neg-alpha4/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p5-alpha5/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p3-alpha5/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p2plus-alpha5/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/bart-experiment-p2neg-alpha5/logs/test_logs.csv\",\n",
+    "# ]\n",
     "\n",
-    "## LLM MiniGPT-4 (Open AI) + Fine-Tuning distil-bert\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p5-alpha3/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha4 p5\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p3-alpha3/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha4 p3\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p2plus-alpha3/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha4 p2plus\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p2neg-alpha3/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha4 p2neg\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p5-alpha4/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha4 p5\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p3-alpha4/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha4 p3\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p2plus-alpha4/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha4 p2plus\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p2neg-alpha4/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha4 p2neg\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p5-alpha5/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha5 p5\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p3-alpha5/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha5 p3\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p2plus-alpha5/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha5 p2neg\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p2neg-alpha5/logs/test_logs.csv\") # miniGPT-4 (OpenAI) distil-bert alpha5 p2neg\n",
-    "## LLM MiniGPT-4 (Open AI) + BART-LARGE-MNLI\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p5-alpha3/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha3 p5\n",
-    "df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p3-alpha3/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha3 p3\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p2plus-alpha3/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha3 p2plus\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p2neg-alpha3/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha3 p2neg\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p5-alpha4/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha4 p5\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p3-alpha4/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha4 p3\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p2plus-alpha4/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha4 p2plus\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p2neg-alpha4/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha4 p2neg\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p5-alpha5/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha5 p5\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p3-alpha5/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha5 p3\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p2plus-alpha5/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha5 p2plus\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p2neg-alpha5/logs/test_logs.csv\") # LLM opensource BART-LARGE-MNLI alpha5 p2neg\n",
+    "# ## LLM MiniGPT-4 (Open AI) + Fine-Tuning distil-bert\n",
+    "# data_paths = [\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p5-alpha3/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p3-alpha3/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p2plus-alpha3/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p2neg-alpha3/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p5-alpha4/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p3-alpha4/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p2plus-alpha4/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p2neg-alpha4/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p5-alpha5/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p3-alpha5/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p2plus-alpha5/logs/test_logs.csv\",\n",
+    "#     \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-distil-experiment-p2neg-alpha5/logs/test_logs.csv\",\n",
+    "# ]\n",
     "\n",
-    "\n",
-    "f1_scores = df[\"f1_score\"].to_numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.760916  , 0.7406927 , 0.75432359, 0.75193405, 0.76582263])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f1_scores"
+    "# ## LLM MiniGPT-4 (Open AI) + BART-LARGE-MNLI\n",
+    "data_paths = [\n",
+    "    \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p5-alpha3/logs/test_logs.csv\",\n",
+    "    \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p3-alpha3/logs/test_logs.csv\",\n",
+    "    \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p2plus-alpha3/logs/test_logs.csv\",\n",
+    "    \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p2neg-alpha3/logs/test_logs.csv\",\n",
+    "    \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p5-alpha4/logs/test_logs.csv\",\n",
+    "    \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p3-alpha4/logs/test_logs.csv\",\n",
+    "    \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p2plus-alpha4/logs/test_logs.csv\",\n",
+    "    \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p2neg-alpha4/logs/test_logs.csv\",\n",
+    "    \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p5-alpha5/logs/test_logs.csv\",\n",
+    "    \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p3-alpha5/logs/test_logs.csv\",\n",
+    "    \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p2plus-alpha5/logs/test_logs.csv\",\n",
+    "    \"/home/neemias/PerceptSent-LLM-approach/experiments/openai-bart-experiment-p2neg-alpha5/logs/test_logs.csv\",\n",
+    "]"
    ]
   },
   {
@@ -119,62 +105,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Max F1-score: 0.7658226301275305\n",
-      "Average F1-score: 0.7547377945074475\n",
-      "Confidence interval 95%: (0.7428550462950477, 0.7666205427198473)\n",
-      "Inteval: 0.011882748212399763 - Interval: 0.011882748212399763\n",
-      "Inteval: 0.011882748212399763 - Interval: 0.011882748212399763\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mean_f1 = np.mean(f1_scores)\n",
+    "for data_path in data_paths:\n",
+    "    df = pd.read_csv(data_path)\n",
     "\n",
-    "# define the confidence level\n",
-    "confidence_level = 0.95\n",
-    "degrees_freedon = len(f1_scores)-1\n",
+    "    f1_scores = df[\"f1_score\"].to_numpy()\n",
+    "    mean_f1 = np.mean(f1_scores)\n",
     "\n",
-    "confidence_interval = stats.t.interval(\n",
-    "    confidence_level, \n",
-    "    degrees_freedon, \n",
-    "    loc=mean_f1, \n",
-    "    scale=stats.sem(f1_scores)\n",
-    ")\n",
+    "    # define the confidence level\n",
+    "    confidence_level = 0.95\n",
+    "    degrees_freedon = len(f1_scores)-1\n",
     "\n",
-    "print(f\"Max F1-score: {max(f1_scores)}\")\n",
-    "print(f\"Average F1-score: {mean_f1}\")\n",
-    "print(f\"Confidence interval 95%: {confidence_interval}\")\n",
-    "print(f\"Inteval: {abs(confidence_interval[0]-mean_f1)} - Interval: {abs(confidence_interval[1]-mean_f1)}\")\n",
-    "confidence_interval = stats.t.interval(\n",
-    "    confidence_level, \n",
-    "    degrees_freedon, \n",
-    "    loc=max(f1_scores), \n",
-    "    scale=stats.sem(f1_scores)\n",
-    ")\n",
+    "    confidence_interval = stats.t.interval(\n",
+    "        confidence_level, \n",
+    "        degrees_freedon, \n",
+    "        loc=mean_f1, \n",
+    "        scale=stats.sem(f1_scores)\n",
+    "    )\n",
     "\n",
-    "print(f\"Inteval: {abs(confidence_interval[0]-max(f1_scores))} - Interval: {abs(confidence_interval[1]-max(f1_scores))}\")"
+    "\n",
+    "    print(f\"\\n\\nProblem: {data_path.split('/')[-3].split('.')[0]}\")\n",
+    "    print(f\"Max F1-score: {max(f1_scores)}\")\n",
+    "    print(f\"Average F1-score: {mean_f1}\")\n",
+    "    print(f\"Median F1-score: {np.median(f1_scores)}\")\n",
+    "    print(f\"Confidence interval 95%: {confidence_interval}\")\n",
+    "    print(f\"Inteval: {abs(confidence_interval[0]-mean_f1)} - Interval: {abs(confidence_interval[1]-mean_f1)}\")\n",
+    "    confidence_interval = stats.t.interval(\n",
+    "        confidence_level, \n",
+    "        degrees_freedon, \n",
+    "        loc=max(f1_scores), \n",
+    "        scale=stats.sem(f1_scores)\n",
+    "    )\n",
+    "\n",
+    "    print(f\"Inteval: {abs(confidence_interval[0]-max(f1_scores))} - Interval: {abs(confidence_interval[1]-max(f1_scores))}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
