[New] add openai sentiment-kfold results

--- a/notebooks/openai-sentiment-kfold.ipynb
+++ b/notebooks/openai-sentiment-kfold.ipynb
@@ -58,23 +58,14 @@
     "### Load experiments for alpha 5\n",
     "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/percept_dataset_alpha5_p5.csv\")\n",
     "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/gpt4-openai-classify/percept_dataset_alpha5_p5.csv\")\n",
-    "df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/percept_dataset_alpha5_p3.csv\")\n",
+    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/percept_dataset_alpha5_p3.csv\")\n",
     "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/gpt4-openai-classify/percept_dataset_alpha5_p3.csv\")\n",
     "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/percept_dataset_alpha5_p2plus.csv\")\n",
     "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/gpt4-openai-classify/percept_dataset_alpha5_p2plus.csv\")\n",
-    "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/percept_dataset_alpha5_p2neg.csv\")\n",
+    "df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/percept_dataset_alpha5_p2neg.csv\")\n",
     "# df = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/minigpt4-classify/gpt4-openai-classify/percept_dataset_alpha5_p2neg.csv\")\n",
     "\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.shape"
+    "df.info()"
    ]
   },
   {
@@ -91,8 +82,8 @@
    "outputs": [],
    "source": [
     "# df_response = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-only/p5-results.csv\")\n",
-    "df_response = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-only/p3-results.csv\")\n",
-    "# df_response = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-only/p2-results.csv\")\n",
+    "# df_response = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-only/p3-results.csv\")\n",
+    "df_response = pd.read_csv(\"/home/neemias/PerceptSent-LLM-approach/data/gpt4-openai-only/p2-results.csv\")\n",
     "df_response[\"response\"] = df_response[\"response\"].apply(lambda x: x.replace('.', '').replace(' ', ''))\n",
     "display(df_response.head())\n",
     "display(df_response.tail())"
@@ -104,18 +95,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_response[\"response\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df[df[\"id\"].isin(df_response[\"id\"])].reset_index(drop=True)\n",
-    "display(df.head())\n",
-    "display(df.tail())"
+    "df = df[df[\"id\"].isin(df_response[\"id\"])]\n",
+    "df.info()"
    ]
   },
   {
@@ -144,6 +125,8 @@
     "            \"Positive\": 2,\n",
     "        }\n",
     "        ids = df[\"id\"].iloc[val_idx].to_list()\n",
+    "        # print(len(ids))\n",
+    "        # display(df_response[df_response[\"id\"] == id])\n",
     "        response = [df_response[df_response[\"id\"] == id][\"response\"].iloc[0] for id in ids]\n",
     "    elif (len(sentiments) == 2):\n",
     "        # P2+\n",
@@ -219,20 +202,6 @@
     "\n",
     "print(f\"Inteval: {abs(confidence_interval[0]-max(f1_scores))} - Interval: {abs(confidence_interval[1]-max(f1_scores))}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
